--- a/main.html
+++ b/main.html
@@ -130,7 +130,7 @@
             }
          </script>
         <header style="background: #bee0c5; text-align: center; font-size: 20px">Glass Bending Calculator!</header>
-        <h1 style="padding-top: 0.01%"></h1>>
+        <h1 style="padding-top: 0.01%"></h1>
         <table align="center" width="50%" style="background: #bee0c5; table-layout: fixed; text-align: center">
             <tr>
                 <td>
